# SheSignals

./: .gitignore  README.md  docker-compose.yml  render.yaml
.github/workflows/: nextjs.yml
backend/: Dockerfile  evaluate_models.py  main.py  pyproject.toml  schemas.py  server.py  test_first10.py  test_n_rows.py  test_sample.py  test_server.py  train_cpu_model.py  train_optimized_xgboost.py
backend/models/: feature_names.joblib  xgb_threshold.joblib  xgboost_model.pkl
backend/tests/: test_api.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: ThemeToggle.tsx  fields.ts  globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/components/: ExpandableSection.tsx
frontend/app/contact/: page.tsx
frontend/app/screening/: page.tsx
frontend/app/technology/: page.tsx
frontend/public/: SheSignals_Parents_Guidebook.docx  SheSignals_Questions_W_Explanation.docx
