[project]
name = "autism"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "joblib>=1.5.3",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "scikit-learn==1.6.1",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.41.0",
    "xgboost>=2.1.4",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "optuna>=4.8.0",
]
